# cython-colorsys

./: .travis.yml  MANIFEST.in  README.md  build_tests.py  requirements-dev.txt  setup.cfg  setup.py
src/cycolorsys/: __init__.pxd  __init__.py  _cycolorsys.pxd  _cycolorsys.pyx  colorobj.pxd  colorobj.pyx
tests/: _test_colorobj.pyx  _test_pyx_cimport.pyx  conftest.py  test_benchmark.py  test_colorobj.py  test_colorsys.py  test_pyx_cimport.py
