[bdist_wheel]
universal = False

[metadata]
name = cython-colorsys
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/cython-colorsys
description = Python's colorsys module implemented in Cython
long_description = file: README.md
long_description_content_type = text/markdown
license = PSF license
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Cython
    Programming Language :: Python :: 3


[options]
zip_safe = False
include_package_data = True
setup_requires = cython
package_dir=
    =src
packages = find:

[options.packages.find]
where = src
exclude =
    tests
    tools

[options.package_data]
* = LICENSE, README.md, requirements*.txt
cycolorsys =
    *.pxd
    *.c

[tool:pytest]
testpaths = tests
